--- a/vuejs/01介绍/07组件化应用构建.html
+++ b/vuejs/01介绍/07组件化应用构建.html
@@ -3,28 +3,33 @@
 
 <head>
     <meta charset=utf-8>
-    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <script src="https://unpkg.com/vue@next"></script>
 </head>
 
 <body>
-    <div id=app>
+    <div id="todo-list-app">
         <todo-item v-for="item in humanList" v-bind:todo="item" v-bind:key="item.id"></todo-item>
     </div>
     <script>
-        Vue.component('todo-item', {
-            props: ['todo'],
-            template: '<li>{{ todo.text }}</li>'
-        })
-        var app = new Vue({
-            el: '#app',
-            data: {
-                humanList: [
+        const TodoList = {
+            data(){
+                return {
+                    humanList: [
                     { id: 0, text: 'Tom' },
                     { id: 1, text: 'Jerry' },
                     { id: 2, text: 'Jack' },
                 ]
+                }
             }
+        }
+        const app = Vue.createApp(TodoList)
+
+        app.component('todo-item', {
+            props: ['todo'],
+            template: '<li>{{ todo.text }}</li>'
         })
+
+        app.mount('#todo-list-app')
     </script>
 </body>
 
