--- a/vuejs/01介绍/03处理用户输入.html
+++ b/vuejs/01介绍/03处理用户输入.html
@@ -3,26 +3,28 @@
 
 <head>
     <meta charset=utf-8>
-    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <script src="https://unpkg.com/vue@next"></script>
 </head>
 
 <body>
-    <div id=app>
+    <div id="event-handling">
         <p>{{ message }}</p>
         <button v-on:click="reverseMessage">反转消息</button>
     </div>
     <script>
-        var app = new Vue({
-            el: '#app',
-            data: {
-                message: 'Hello Vue.js!'
+        const EventHandling = {
+            data(){
+                return {
+                    message: 'Hello Vue.js!'
+                }
             },
             methods: {
-                reverseMessage: function() {
+                reverseMessage(){
                     this.message = this.message.split(' ').reverse().join(' ')
                 }
             }
-        })
+        }
+        Vue.createApp(EventHandling).mount('#event-handling')
     </script>
 </body>
 
