--- a/vuejs/01介绍/05条件与循环.html
+++ b/vuejs/01介绍/05条件与循环.html
@@ -7,23 +7,23 @@
 </head>
 
 <body>
-    <div id="counter">
-        Counter: {{ counter }}
+    <div id="conditional-rendering">
+        <p v-if="seen">看到我了</p>
     </div>
     <script>
-        const Counter = {
+        const ConditionalRendering = {
             data(){
                 return {
-                    counter: 0
+                    seen: true
                 }
             },
             mounted() {
                 setInterval(()=>{
-                    this.counter++
+                    this.seen = !this.seen
                 }, 1000)
             }
         }
-        Vue.createApp(Counter).mount('#counter')
+        Vue.createApp(ConditionalRendering).mount('#conditional-rendering')
     </script>
 </body>
 
