--- a/vuejs/02Vue实例/03实例生命周期钩子.html
+++ b/vuejs/02Vue实例/03实例生命周期钩子.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset=utf-8>
-    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <script src="https://unpkg.com/vue@next"></script>
 </head>
 
 <body>
@@ -11,17 +11,38 @@
         <p>{{ foo }}</p>
     </div>
     <script>
-        var obj = {
-            foo: 'bar'
-        }
-
-        var app = new Vue({
-            el: '#app',
-            data: obj,
-            created: function(){
-                console.log('created foo:' + obj.foo)
+        const App = {
+            data() {
+                return {
+                    foo: 'bar'
+                }
+            },
+            beforeCreate(){
+                console.log('beforeCreate')
+            },
+            created() {
+                console.log('created')
+            },
+            beforeMount(){
+                console.log('beforeMount')
+            },
+            mounted(){
+                console.log('mounted')
+            },
+            beforeUpdate(){
+                console.log('beforeUpdate')
+            },
+            update(){
+                console.log('update')
+            },
+            beforeUnmount(){
+                console.log('beforeUnmount')
+            },
+            unmounted(){
+                console.log('unmounted')
             }
-        })
+        }
+        Vue.createApp(App).mount('#app')
     </script>
 </body>
 
