--- a/vuejs/03模板语法/01插值.html
+++ b/vuejs/03模板语法/01插值.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset=utf-8>
-    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <script src="https://unpkg.com/vue@next"></script>
 </head>
 
 <body>
@@ -18,7 +18,8 @@
         <p v-bind:id="'list'+dynamicId">sss</p>
         <p v-if="seen">seeeen...</p>
         <div v-on:click="click2">
-            <div v-on:click.stop="click1"> <!--".stop"的作用是不在向上冒泡-->
+            <div v-on:click.stop="click1">
+                <!--".stop"的作用是不在向上冒泡-->
                 click me
             </div>
         </div>
@@ -28,23 +29,25 @@
         </div>
     </div>
     <script>
-        var app = new Vue({
-            el: '#app',
-            data: {
-                msg: "Hello Vue!",
-                msg2: "11111",
-                rawHtml: "<span style='color:red'>Red...</span>",
-                dynamicId: 10,
-                url: "http://www.baidu.com",
-                seen: true,
-                click1: function () {
-                    console.log("click 1")
-                },
-                click2: function () {
-                    console.log("click 2")
+        const App = {
+            data() {
+                return {
+                    msg: "Hello Vue!",
+                    msg2: "11111",
+                    rawHtml: "<span style='color:red'>Red...</span>",
+                    dynamicId: 10,
+                    url: "http://www.baidu.com",
+                    seen: true,
+                    click1: function () {
+                        console.log("click 1")
+                    },
+                    click2: function () {
+                        console.log("click 2")
+                    }
                 }
             }
-        })
+        }
+        Vue.createApp(App).mount('#app')
         app.msg2 = "22222";
     </script>
 </body>
