--- a/vuejs/05Class与Style绑定/02Style.html
+++ b/vuejs/05Class与Style绑定/02Style.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset=utf-8>
-    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <script src="https://unpkg.com/vue@next"></script>
 </head>
 
 <body>
@@ -13,25 +13,26 @@
         <div :style="[a, b]">zzzzzzzz</div>
     </div>
     <script>
-        var app = new Vue({
-            el: '#app',
-            data: {
-                activeColor: '#333',
-                fontSize: 22,
-                styleObject: {
-                    color: 'red',
-                    fontSize: '13px'
-                },
-                a: {
-                    color: 'yellow',
-                    fontSize: '23px'
-                },
-                b: {
-                    color: 'green',
-                    fontsize: '25px'
+        Vue.createApp({
+            data() {
+                return {
+                    activeColor: '#333',
+                    fontSize: 22,
+                    styleObject: {
+                        color: 'red',
+                        fontSize: '13px'
+                    },
+                    a: {
+                        color: 'yellow',
+                        fontSize: '23px'
+                    },
+                    b: {
+                        color: 'green',
+                        fontsize: '25px'
+                    }
                 }
             }
-        })
+        }).mount('#app')
     </script>
     <style>
     </style>
