--- a/vuejs/05Class与Style绑定/01Class.html
+++ b/vuejs/05Class与Style绑定/01Class.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset=utf-8>
-    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <script src="https://unpkg.com/vue@next"></script>
 </head>
 
 <body>
@@ -12,16 +12,25 @@
         <div :class="[isActive ? 'actve': 'yellow']">yyyyy</div>
     </div>
     <script>
-        var app = new Vue({
-            el: '#app',
-            data: {
-                isActive: true
+        Vue.createApp({
+            data() {
+                return {
+                    isActive: true
+                }
             }
-        })
+        }).mount('#app')
     </script>
     <style>
-        .active{ width: 200px; height: 100px; background-color: red; color: white;}
-        .yellow{color:yellow}
+        .active {
+            width: 200px;
+            height: 100px;
+            background-color: red;
+            color: white;
+        }
+
+        .yellow {
+            color: yellow
+        }
     </style>
 </body>
 
