--- a/vuejs/06条件渲染/01v-if.html
+++ b/vuejs/06条件渲染/01v-if.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset=utf-8>
-    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <script src="https://unpkg.com/vue@next"></script>
 </head>
 
 <body>
@@ -22,12 +22,13 @@
         </div>
     </div>
     <script>
-        var app = new Vue({
-            el: '#app',
-            data: {
-                value: ''
+        Vue.createApp({
+            data() {
+                return {
+                    value: ''
+                }
             }
-        })
+        }).mount('#app')
     </script>
 </body>
 
