--- a/vuejs/10组件基础/02.html
+++ b/vuejs/10组件基础/02.html
@@ -3,31 +3,21 @@
 
 <head>
     <meta charset=utf-8>
-    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <script src="https://unpkg.com/vue@next"></script>
 </head>
 
 <body>
-    <div id=app :style="{ fontSize: postFontSize + 'em' }">
-        <blog-post v-for="post in posts" :post="post" :key="post.id" v-on:enlarge-text='onEnlargeText'>
-        </blog-post>
+    <div id="blog-posts-events-demo">
+        <div :style="{fontSize: postFontSize + 'em'}">
+            <blog-post v-for="post in posts" :post="post" :key="post.id" @enlarge-text='onEnlargeText'>
+            </blog-post>
+        </div>
     </div>
     <script>
-        Vue.component('blog-post', {
-            props: ['post'],
-            data: function () {
-                return {}
-            },
-            template: `<div><h3>{{post.title}}</h3>
-                <button v-on:click="$emit('enlarge-text', 0.1)">
-                    Enlarge text
-                </button>
-                <div v-html="post.content"></div></div>`
-        })
-
-        var app = new Vue({
-            el: '#app',
-            data: {
-                posts: [{
+        const app = Vue.createApp({
+            data() {
+                return {
+                    posts: [{
                         id: 1,
                         title: 'My journey with Vue'
                     },
@@ -39,15 +29,31 @@
                         id: 3,
                         title: 'Why Vue is so fun'
                     }
-                ],
-                postFontSize: 1
+                    ],
+                    postFontSize: 1
+                }
             },
             methods: {
-                onEnlargeText: function (enlargeAmount) {
+                onEnlargeText(enlargeAmount) {
                     this.postFontSize += enlargeAmount
                 }
-            }
+            },
         })
+        app.component('blog-post', {
+            props: ['post'],
+            data() {
+                return {}
+            },
+            template: `
+                <div>
+                    <h3>{{post.title}}</h3>
+                    <button @click="$emit('enlarge-text', 0.1)">
+                        Enlarge text
+                    </button>
+                    <div v-html="post.content"></div>
+                </div>`
+        })
+        app.mount('#blog-posts-events-demo')
     </script>
 </body>
 
